--- a/source/index.html
+++ b/source/index.html
@@ -507,8 +507,8 @@
       <div class="gallery__wrapper content-wrapper">
         <h2 class="gallery__title section-title">Фотогалерея</h2>
         <div class="gallery__text-wrapper title-wrapper">
-          <p>Добавляйте фото с хэштегом #лайфтур,
-            а также отмечайте нас на фото. Лучшие фотографии украсят этот раздел нашего сайта.</p>
+          <p>Добавляйте фото с хэштегом #лайфтур,<br>
+            а также отмечайте нас на фото. Лучшие фотографии украсят&nbsp;этот раздел нашего сайта.</p>
           <div class="gallery__buttons swiper-buttons">
             <button class="swiper-button swiper-button--prev swiper-button--gallery-prev" type="button" aria-label="Предыдущее фото"></button>
             <button class="swiper-button swiper-button--next swiper-button--gallery-next" type="button" aria-label="Следующее фото"></button>
@@ -518,7 +518,7 @@
           <ul class="gallery__list swiper-wrapper">
             <li class="gallery__item swiper-slide">
               <picture class="gallery__image">
-                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-1-desktop@1x.webp 1x, img/images/gallery/photo-1-desktop@2x.webp 2x" width="284" height="468">
+                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-1-desktop@1x.webp 1x, img/images/gallery/photo-1-desktop@2x.webp 2x" width="284" height="463">
                 <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-1-tablet@1x.webp 1x, img/images/gallery/photo-1-tablet@2x.webp 2x" width="253" height="418">
                 <source type="image/webp" srcset="img/images/gallery/photo-1-mobile@1x.webp 1x, img/images/gallery/photo-1-mobile@2x.webp 2x" width="157" height="266">
                 <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-1-desktop@1x.jpg 1x, img/images/gallery/photo-1-desktop@2x.jpg 2x" width="284" height="463">
@@ -528,47 +528,47 @@
             </li>
             <li class="gallery__item swiper-slide">
               <picture>
-                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-2-desktop@1x.webp 1x, img/images/gallery/photo-2-desktop@2x.webp 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-2-tablet@1x.webp 1x, img/images/gallery/photo-2-tablet@2x.webp 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-2-desktop@1x.webp 1x, img/images/gallery/photo-2-desktop@2x.webp 2x" width="284" height="232">
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-2-tablet@1x.webp 1x, img/images/gallery/photo-2-tablet@2x.webp 2x" width="252" height="210">
                 <source type="image/webp" srcset="img/images/gallery/photo-2-mobile@1x.webp 1x, img/images/gallery/photo-2-mobile@2x.webp 2x" width="157" height="135">
-                <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-2-desktop@1x.jpg 1x, img/images/gallery/photo-2-desktop@2x.jpg 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-2-tablet@1x.jpg 1x, img/images/gallery/photo-2-tablet@2x.jpg 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-2-desktop@1x.jpg 1x, img/images/gallery/photo-2-desktop@2x.jpg 2x" width="284" height="232">
+                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-2-tablet@1x.jpg 1x, img/images/gallery/photo-2-tablet@2x.jpg 2x" width="252" height="210">
                 <img class="gallery__image" src="img/images/gallery/photo-2-mobile@1x.jpg" srcset="img/images/gallery/photo-2-mobile@2x.jpg 2x" width="158" height="135" alt="Человек на вершине горы любуется видами" loading="lazy">
               </picture>
               <picture>
-                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-3-desktop@1x.webp 1x, img/images/gallery/photo-3-desktop@2x.webp 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-3-tablet@1x.webp 1x, img/images/gallery/photo-3-tablet@2x.webp 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-3-desktop@1x.webp 1x, img/images/gallery/photo-3-desktop@2x.webp 2x" width="284" height="225">
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-3-tablet@1x.webp 1x, img/images/gallery/photo-3-tablet@2x.webp 2x" width="252" height="206">
                 <source type="image/webp" srcset="img/images/gallery/photo-3-mobile@1x.webp 1x, img/images/gallery/photo-3-mobile@2x.webp 2x" width="158" height="129">
-                <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-3-desktop@1x.jpg 1x, img/images/gallery/photo-3-desktop@2x.jpg 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-3-tablet@1x.jpg 1x, img/images/gallery/photo-3-tablet@2x.jpg 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-3-desktop@1x.jpg 1x, img/images/gallery/photo-3-desktop@2x.jpg 2x" width="284" height="225">
+                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-3-tablet@1x.jpg 1x, img/images/gallery/photo-3-tablet@2x.jpg 2x" width="252" height="206">
                 <img class="gallery__image" src="img/images/gallery/photo-3-mobile@1x.jpg" srcset="img/images/gallery/photo-3-mobile@2x.jpg 2x" width="158" height="129" alt="Человек на вершине горы любуется видами" loading="lazy">
               </picture>
             </li>
             <li class="gallery__item swiper-slide">
               <picture class="gallery__image">
-                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-4-desktop@1x.webp 1x, img/images/gallery/photo-4-desktop@2x.webp 2x" width="284" height="468">
-                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-4-tablet@1x.webp 1x, img/images/gallery/photo-4-tablet@2x.webp 2x" width="253" height="418">
+                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-4-desktop@1x.webp 1x, img/images/gallery/photo-4-desktop@2x.webp 2x" width="284" height="463">
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-4-tablet@1x.webp 1x, img/images/gallery/photo-4-tablet@2x.webp 2x" width="250" height="418">
                 <source type="image/webp" srcset="img/images/gallery/photo-4-tablet@1x.webp 1x, img/images/gallery/photo-4-tablet@2x.webp 2x" width="157" height="266">
                 <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-4-desktop@1x.jpg 1x, img/images/gallery/photo-4-desktop@2x.jpg 2x" width="284" height="463">
-                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-4-tablet@1x.jpg 1x, img/images/gallery/photo-4-tablet@2x.jpg 2x" width="253" height="418">
+                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-4-tablet@1x.jpg 1x, img/images/gallery/photo-4-tablet@2x.jpg 2x" width="250" height="418">
                 <img src="img/images/gallery/photo-4-tablet@1x.jpg" srcset="img/images/gallery/photo-4-tablet@2x.jpg 2x" width="158" height="266" alt="Человек на вершине горы любуется видами" loading="lazy">
               </picture>
             </li>
             <li class="gallery__item swiper-slide">
               <picture>
-                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-5-desktop@1x.webp 1x, img/images/gallery/photo-5-desktop@2x.webp 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-5-desktop@1x.webp 1x, img/images/gallery/photo-5-desktop@2x.webp 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-5-desktop@1x.webp 1x, img/images/gallery/photo-5-desktop@2x.webp 2x" width="284" height="231">
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-5-desktop@1x.webp 1x, img/images/gallery/photo-5-desktop@2x.webp 2x" width="252" height="206">
                 <source type="image/webp" srcset="img/images/gallery/photo-5-desktop@1x.webp 1x, img/images/gallery/photo-5-desktop@2x.webp 2x" width="157" height="134">
-                <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-5-desktop@1x.jpg 1x, img/images/gallery/photo-5-desktop@2x.jpg 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-5-desktop@1x.jpg 1x, img/images/gallery/photo-5-desktop@2x.jpg 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-5-desktop@1x.jpg 1x, img/images/gallery/photo-5-desktop@2x.jpg 2x" width="284" height="231">
+                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-5-desktop@1x.jpg 1x, img/images/gallery/photo-5-desktop@2x.jpg 2x" width="252" height="206">
                 <img class="gallery__image" src="img/images/gallery/photo-5-desktop@1x.jpg" srcset="img/images/gallery/photo-5-desktop@2x.jpg 2x" width="158" height="134" alt="Человек на вершине горы любуется видами" loading="lazy">
               </picture>
               <picture>
-                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-6-desktop@1x.webp 1x, img/images/gallery/photo-6-desktop@2x.webp 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-6-desktop@1x.webp 1x, img/images/gallery/photo-6-desktop@2x.webp 2x" width="253" height="206">
+                <source media="(min-width: 1440px)" type="image/webp" srcset="img/images/gallery/photo-6-desktop@1x.webp 1x, img/images/gallery/photo-6-desktop@2x.webp 2x" width="284" height="231">
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/images/gallery/photo-6-desktop@1x.webp 1x, img/images/gallery/photo-6-desktop@2x.webp 2x" width="252" height="206">
                 <source type="image/webp" srcset="img/images/gallery/photo-6-desktop@1x.webp 1x, img/images/gallery/photo-6-desktop@2x.webp 2x" width="158" height="128">
                 <source media="(min-width: 1440px)" type="image/jpg" srcset="img/images/gallery/photo-6-desktop@1x.jpg 1x, img/images/gallery/photo-6-desktop@2x.jpg 2x" width="284" height="228">
-                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-6-desktop@1x.jpg 1x, img/images/gallery/photo-6-desktop@2x.jpg 2x" width="253" height="206">
+                <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/gallery/photo-6-desktop@1x.jpg 1x, img/images/gallery/photo-6-desktop@2x.jpg 2x" width="252" height="206">
                 <img class="gallery__image" src="img/images/gallery/photo-6-desktop@1x.jpg" srcset="img/images/gallery/photo-6-desktop@2x.jpg 2x" width="158" height="128" alt="Человек на вершине горы любуется видами" loading="lazy">
               </picture>
             </li>
@@ -587,20 +587,24 @@
       </div>
     </section>
 
-    <section class="form-section" data-test="form">
-      <h3>Остались вопросы?</h3>
-      <p>Заполните форму и наш оператор свяжется с вами для консультации.</p>
-      <form class="form" action="https://echo.htmlacademy.ru" method="post">
-        <label class="form__label">
-          <span class="form__label-text">Телефон</span>
-          <input class="form__field form__field--phone" type="tel" name="phone" id="phone" placeholder="+7 (000)-000-00-00" minlength="2" maxlength="14" required>
-        </label>
-        <label class="form__label">
-          <span class="form__label-text">Email</span>
-          <input class="form__field form__field--email" type="email" name="email" id="email" placeholder="email@email.ru" required>
-        </label>
-        <button class="form__button button--primary button" type="submit">Отправить</button>
-      </form>
+    <section class="form" data-test="form">
+      <div class="form__wrapper">
+        <div class="form__content-wrapper">
+          <h3>Остались вопросы?</h3>
+          <p>Заполните форму и наш оператор свяжется с вами для консультации.</p>
+          <form class="form__main" action="https://echo.htmlacademy.ru" method="post">
+            <label class="form__label">
+              <input class="form__field form__field--phone" type="tel" name="phone" id="phone" placeholder="+7 (000)-000-00-00" minlength="2" maxlength="14" required>
+              <span class="form__label-text">Телефон</span>
+            </label>
+            <label class="form__label">
+              <input class="form__field form__field--email" type="email" name="email" id="email" placeholder="email@email.ru" required>
+              <span class="form__label-text">Email</span>
+            </label>
+            <button class="form__button button--primary button" type="submit">Отправить</button>
+          </form>
+        </div>
+      </div>
     </section>
     <section class="contacts" data-test="footer" id="contacts">
       <h2 class="contacts__title section-title">Контакты</h2>
@@ -624,11 +628,11 @@
         </div>
         <picture>
           <source media="(min-width: 1100px)" type="image/webp" srcset="img/images/map/map-desktop@1x.webp 1x, img/images/map/map-desktop@2x.webp 2x" width="600" height="324">
-          <source media="(min-width: 768px)" type="image/webp" srcset="img/images/map/map-tablet@1x.webp 1x, img/images/map/map-tablet@2x.webp 2x" width="768" height="340">
-          <source type="image/webp" srcset="img/images/map/map-tablet@1x.webp 1x, img/images/map/map-tablet@2x.webp 2x" width="320" height="343">
+          <source media="(min-width: 321px)" type="image/webp" srcset="img/images/map/map-tablet@1x.webp 1x, img/images/map/map-tablet@2x.webp 2x" width="768" height="340">
+          <source type="image/webp" srcset="img/images/map/map-mobile@1x.webp 1x, img/images/map/map-mobile@2x.webp 2x" width="320" height="343">
           <source media="(min-width: 1100px)" type="image/jpg" srcset="img/images/map/map-desktop@1x.jpg 1x, img/images/map/map-desktop@2x.jpg 2x" width="600" height="324">
-          <source media="(min-width: 768px)" type="image/jpg" srcset="img/images/map/map-tablet@1x.jpg 1x, img/images/map/map-tablet@2x.jpg 2x" width="768" height="340">
-          <img class="contacts__image" src="img/images/map/map-tablet@1x.jpg" srcset="img/images/map/map-tablet@2x.jpg 2x" width="320" height="343" alt="мы на карте: пр-т Мира, д. 14, офис 101" loading="lazy">
+          <source media="(min-width: 321px)" type="image/jpg" srcset="img/images/map/map-tablet@1x.jpg 1x, img/images/map/map-tablet@2x.jpg 2x" width="768" height="340">
+          <img class="contacts__image" src="img/images/map/map-mobile@1x.jpg" srcset="img/images/map/map-mobile@2x.jpg 2x" width="320" height="343" alt="мы на карте: пр-т Мира, д. 14, офис 101" loading="lazy">
         </picture>
       </div>
     </section>
