--- a/source/index.html
+++ b/source/index.html
@@ -4,33 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Организация походов в горы и обучение туристов: учитесь безопасным техникам выживания, планируйте походы и получайте незабываемые впечатления от природы!">
+  <meta name="keywords" content="походы, горы, обучение туристов, туризм, выживание, планирование походов, горные маршруты, активный отдых">
+
   <title>Lifetour</title>
 
-  <!-- <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg">
-  <link rel="shortcut icon" href="favicon/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="manifest" href="supergym.webmanifest">
+  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="lifetour.webmanifest" />
 
-  <link rel="preload" href="fonts/roboto-condensed/RobotoCondensed-Bold.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous">
-  <link rel="preload" href="fonts/roboto-condensed/RobotoCondensed-Light.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous">
-  <link rel="preload" href="fonts/roboto-condensed/RobotoCondensed-Medium.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous">
-  <link rel="preload" href="fonts/roboto-condensed/RobotoCondensed-Regular.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous">
-  <link rel="preload" href="fonts/alumni-sans/AlumniSans-ExtraBold.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous">
-  <link rel="preload" href="fonts/alumni-sans/AlumniSans-SemiBold.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous"> -->
+  <link rel="preload" href="fonts/montserrat-light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-semibold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/montserrat-extrabold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
   <link rel="stylesheet" href="sass/style.scss">
 </head>
 
 <body class="page-body">
-  <!-- пример использования спрайта -->
-  <!-- <img src="/__spritemap#sprite-logo-view" alt="Это спрайт"> -->
+
   <header class="header" data-test="header">
     <div class="header__wrapper">
       <nav class="header__nav nav" aria-label="Навигация по сайту">
